--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.4.32'
+    ext {
+        version_retrofit = "2.9.0"
+        ext.kotlin_version = '1.4.32'
+        version_moshi = "1.9.3"
+        version_core = "1.3.1"
+    }
+
     repositories {
         google()
         mavenCentral()
